Geo-Wall-E/Samples/Errors/MissplacedQuotes.gs
//This is a G# program with errors. A quote is closed on the wrong place

point a "Iam ok";

point b ;

point c "Iam buggy ;//A quote is missing here

point d "Hello world";//Therefore its consumed here

//End of program